<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:text="@string/strInAc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:paddingTop="12dp"
        android:text="@string/strPwd1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="26dp"
        android:paddingTop="12dp"
        android:text="@string/strPwd2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="80dp"
      
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="请输入用户名" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="80dp"
     
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignTop="@+id/textView3"
  
        android:ems="10"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="15dp"
        android:paddingTop="12dp"
        android:text="@string/strmail" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignTop="@+id/textView4"
     
        android:ems="10"
        android:inputType="textEmailAddress" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignTop="@+id/editText4"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="50dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Ml" >

            <requestFocus />
        </RadioButton>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="-32dp"
            android:text="@string/Fm" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radioGroup1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp" >

        <TableRow
          	android:layout_marginTop="80dp"
            android:layout_width="500dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Re" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/Res" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignRight="@+id/textView4"
        android:paddingBottom="6dp"
        android:text="@string/Sex" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1"
        android:layout_marginTop="-150dp"
        android:textColor="#ff0000"
        android:text="提示"
        />

</RelativeLayout>